<resources>
    <string name="app_name" translatable="false">WHFRP3Companion</string>
    <string name="zero" translatable="false">0</string>
    <string name="double_zero" translatable="false">00</string>
    <string name="none">None</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="reset_hand">Reset hand</string>
    <string name="save_hand">Save hand</string>
    <string name="delete_hand">Delete hand</string>
    <string name="roll_100_times">Roll 100 times</string>
    <string name="roll_1000_times">Roll 1000 times</string>
    <string name="roll_5000_times">Roll 5000 times</string>
    <string name="dices_count">Dices count</string>

    <string name="page_home">Home</string>
    <string name="page_dice_roller">Dices roller</string>
    <string name="page_dice_roller_statistics">Statistics</string>
    <string name="page_skills">Skills</string>
    <string name="page_talents">Talents</string>
    <string name="page_careers">Careers</string>
    <string name="page_players">Players</string>
    <string name="page_items">Items</string>
    <string name="page_specializations">Specializations</string>
    <string name="page_characteristics">Characteristics</string>
    <string name="page_state">State</string>
    <string name="page_inventory">Inventory</string>
    <string name="page_actions">Actions</string>
    <string name="page_add_item">Add Item</string>
    <string name="page_effects">Effects</string>

    <string name="characteristic">Characteristic</string>
    <string name="conservative">Conservative</string>
    <string name="reckless">Reckless</string>
    <string name="neutral">Neutral</string>
    <string name="expertise">Expertise</string>
    <string name="fortune">Fortune</string>
    <string name="challenge">Challenge</string>
    <string name="misfortune">Misfortune</string>

    <string name="strength">Strength</string>
    <string name="toughness">Toughness</string>
    <string name="agility">Agility</string>
    <string name="intelligence">Intelligence</string>
    <string name="willpower">Willpower</string>
    <string name="fellowship">Fellowship</string>

    <string name="strength_short">St</string>
    <string name="toughness_short">To</string>
    <string name="agility_short">Ag</string>
    <string name="intelligence_short">Int</string>
    <string name="willpower_short">WP</string>
    <string name="fellowship_short">Fel</string>

    <string name="human">Human</string>
    <string name="dwarf">Dwarf</string>
    <string name="high_elf">High Elf</string>
    <string name="wood_elf">Wood Elf</string>

    <string name="armor">Armor</string>
    <string name="armors">Armors</string>
    <string name="expandable">Expandable</string>
    <string name="expandables">Expandables</string>
    <string name="generic_item">Generic Item</string>
    <string name="generic_items">Generic Items</string>
    <string name="weapon">Weapon</string>
    <string name="weapons">Weapons</string>

    <string name="quality_low">Low</string>
    <string name="quality_normal">Normal</string>
    <string name="quality_superior">Superior</string>
    <string name="quality_magic">Magic</string>

    <string name="armor_helmet">Helmet</string>
    <string name="armor_hat">Hat</string>
    <string name="armor_plate">Plate</string>
    <string name="armor_mail">Mail</string>
    <string name="armor_leather">Leather</string>
    <string name="armor_robe">Robe</string>
    <string name="armor_shield">Shield</string>

    <string name="weapon_axe">Axe</string>
    <string name="weapon_two_handed_axe">Two handed axe</string>
    <string name="weapon_dagger">Dagger</string>
    <string name="weapon_flail">Flail</string>
    <string name="weapon_halberd">Halberd</string>
    <string name="weapon_hammer">Hammer</string>
    <string name="weapon_two_handed_hammer">Two handed hammer</string>
    <string name="weapon_mace">Mace</string>
    <string name="weapon_two_handed_mace">Two handed mace</string>
    <string name="weapon_spear">Spear</string>
    <string name="weapon_stick">Stick</string>
    <string name="weapon_sword">Sword</string>
    <string name="weapon_two_handed_sword">Two handed sword</string>
    <string name="weapon_whip">Whip</string>
    <string name="weapon_bow">Bow</string>
    <string name="weapon_crossbow">Crossbow</string>
    <string name="weapon_one_handed_crossbow">One handed crossbow</string>
    <string name="weapon_sling">Sling</string>
    <string name="weapon_handgun">Handgun</string>
    <string name="weapon_rifle">Rifle</string>
    <string name="weapon_repeating_gun">Repeating gun</string>
    <string name="weapon_repeating_crossbow">Repeating crossbow</string>
    <string name="weapon_throwing_dagger">Throwing Dagger</string>
    <string name="weapon_throwing_axe">Throwing Axe</string>

    <string name="range_engaged">Engaged</string>
    <string name="range_short">Short</string>
    <string name="range_medium">Medium</string>
    <string name="range_long">Long</string>
    <string name="range_extreme">Extreme</string>

    <string name="affinity">Affinity</string>
    <string name="faith">Faith</string>
    <string name="order">Order</string>
    <string name="reputation">Reputation</string>
    <string name="tactics">Tactics</string>
    <string name="trick">Trick</string>

    <string name="cooldown_passive">Passive</string>
    <string name="cooldown_talent">Talent</string>
    <string name="cooldown_session">Session</string>

    <string name="create_player">Create a player</string>
    <string name="missing_player_name">Please enter a name</string>
    <string name="delete_player">Delete</string>
    <string name="results">Results</string>
    <string name="select_hand">Select a hand</string>
    <string name="roll">Roll</string>
    <string name="change_money">Add or remove money</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="not_enough_money">Not enough money</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="equip_item">Equip</string>
    <string name="unequip_item">Unequip</string>

    <string name="no_saved_hand">No saved hand</string>
    <string name="search">Search</string>
    <string name="modify">Modify</string>

    <string name="rolls_count_format">%d rolls</string>
    <string name="successful_rolls_with_percentage_format">%1$d successful rolls (%2$s%%)</string>
    <string name="average_face_count_per_roll">%s per rolls</string>

    <string name="total_rolls_count_hint">Total roll count</string>
    <string name="successful_rolls_hint">Successful rolls</string>
    <string name="statistics_average_result_hint">0 / roll</string>
    <string name="hand_name_hint">Hand name</string>

    <string name="failure">Failure</string>

    <string name="cooldown">Cooldown</string>
    <string name="talent_type">Talent type</string>
    <string name="talent_name">Talent name</string>
    <string name="talent_added_format">%1$s added</string>
    <string name="search_talent">Search talent</string>

    <string name="search_effect">Search effect</string>

    <string name="action_name">Action name</string>
    <string name="action_type">Action type</string>
    <string name="action_traits">Action traits</string>
    <string name="action_conditions">Action conditions</string>
    <string name="launch_action">Launch action</string>
    <string name="action_damage_format">%1$d damage, of which %2$d critical</string>

    <string name="melee_attack">Melee attack</string>
    <string name="range_attack">Range attack</string>
    <string name="support">Support</string>
    <string name="spell">Spell</string>
    <string name="blessing">Blessing</string>

    <string name="trait_basic">Basic</string>
    <string name="trait_defense">Defense</string>
    <string name="trait_teamwork">Teamwork</string>
    <string name="trait_ancestor">Ancestor</string>
    <string name="trait_killer">Killer</string>
    <string name="trait_continuous">Continuous</string>
    <string name="trait_sword_way">Sword Way</string>
    <string name="trait_rally">Rally</string>
    <string name="trait_reaction">Reaction</string>
    <string name="trait_ritual_dance">Ritual Dance</string>
    <string name="trait_minor">Minor</string>
    <string name="trait_divine">Divine</string>
    <string name="trait_rank_0">Rank 0</string>
    <string name="trait_rank_1">Rank 1</string>
    <string name="trait_rank_2">Rank 2</string>
    <string name="trait_rank_3">Rank 3</string>
    <string name="trait_rank_4">Rank 4</string>
    <string name="trait_rank_5">Rank 5</string>
    <string name="trait_light_order">Light Order</string>
    <string name="trait_celestial_order">Celestial Order</string>
    <string name="trait_gold_order">Gold Order</string>
    <string name="trait_jade_order">Jade Order</string>
    <string name="trait_amber_order">Amber Order</string>
    <string name="trait_bright_order">Bright Order</string>
    <string name="trait_grey_order">Grey Order</string>
    <string name="trait_amethyst_order">Amethyst Order</string>

    <string name="skill">Skill</string>
    <string name="player_name">Player name</string>
    <string name="race">Race</string>
    <string name="rank">Rank</string>
    <string name="career">Career</string>
    <string name="age">Age</string>
    <string name="size">Size</string>
    <string name="description">Description</string>
    <string name="max_wounds">Max wounds</string>
    <string name="wounds">Wounds</string>
    <string name="corruption">Corruption</string>
    <string name="max_corruption">Max corruption</string>
    <string name="experience">Experience</string>
    <string name="max_experience">Max experience</string>
    <string name="saved">Saved</string>
    <string name="xp" translatable="false">XP</string>
    <string name="stress">Stress</string>
    <string name="exhaustion">Exhaustion</string>
    <string name="encumbrance">Encumbrance</string>

    <string name="item_name">Item name</string>
    <string name="quantity">Quantity</string>
    <string name="quality">Quality</string>
    <string name="damage">Damage</string>
    <string name="critical_level">Critical level</string>
    <string name="range">Range</string>
    <string name="soak">Soak</string>
    <string name="defense">Defense</string>
    <string name="uses">Uses</string>
    <string name="all">All</string>

    <string name="slash" translatable="false">/</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="more_less" translatable="false">+ / -</string>
    <string name="value_on_max_value_format" translatable="false">%1$d / %2$d</string>
    <string name="text_double_dots_text_format" translatable="false">%1$s : %2$s</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor…</string>
</resources>
