<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_player_advanced_dice_roller"
              android:icon="@drawable/ic_roll_dices_white"
              android:title="@string/page_dice_roller" />

        <item android:id="@+id/nav_player_characteristics"
              android:icon="@drawable/ic_person_black"
              android:title="@string/page_characteristics" />

        <item android:id="@+id/nav_player_state"
              android:icon="@drawable/ic_explore_black"
              android:title="@string/page_state" />

        <item android:id="@+id/nav_player_skills"
              android:icon="@drawable/ic_skills_black"
              android:title="@string/page_skills" />

        <item android:id="@+id/nav_player_inventory"
              android:icon="@drawable/ic_bag_black"
              android:title="@string/page_inventory" />

        <item android:id="@+id/nav_player_talents"
              android:icon="@drawable/ic_talents_black"
              android:title="@string/page_talents" />

        <item android:id="@+id/nav_player_actions"
              android:icon="@drawable/ic_action_black"
            android:title="@string/page_actions" />
    </group>
</menu>