<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
              android:icon="@drawable/ic_home_black"
              android:title="@string/page_home" />

        <item android:id="@+id/nav_dice_launcher"
              android:icon="@drawable/ic_dice_white"
              android:title="@string/page_dice_roller" />

        <item android:id="@+id/nav_talents"
              android:icon="@drawable/ic_talents_black"
              android:title="@string/page_talents" />

        <item android:id="@+id/nav_careers"
              android:icon="@drawable/ic_work_black"
              android:title="@string/page_careers" />

        <item android:id="@+id/nav_items"
              android:icon="@drawable/ic_sword_black"
              android:title="@string/page_items" />

        <item android:title="@string/page_skills">
            <menu>
                <item android:id="@+id/nav_skills"
                      android:icon="@drawable/ic_skills_black"
                      android:title="@string/page_skills" />

                <item android:id="@+id/nav_specializations"
                      android:icon="@drawable/ic_specialization_black"
                      android:title="@string/page_specializations" />
            </menu>
        </item>
    </group>
</menu>