<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/reset_hand"
          android:title="@string/reset_hand"
          android:icon="@drawable/ic_refresh_white_24dp"
          app:showAsAction="always" />

    <item android:id="@+id/save_hand"
          android:title="@string/save_hand"
          android:icon="@drawable/ic_save_white"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/delete_hand"
          android:title="@string/delete_hand"
          android:icon="@drawable/ic_delete_white_24dp" />

    <item android:id="@+id/launch_statistics_100"
          android:title="@string/roll_100_times"
          app:showAsAction="never" />
    <item android:id="@+id/launch_statistics_1000"
          android:title="@string/roll_1000_times"
          app:showAsAction="never" />
    <item android:id="@+id/launch_statistics_5000"
          android:title="@string/roll_5000_times"
          app:showAsAction="never" />
</menu>