<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:tools="http://schemas.android.com/tools">
    <ImageView android:id="@+id/actionTypeImageView"
               android:layout_width="0dp"
               android:layout_height="30dp"
               android:layout_marginStart="@dimen/medium_padding"
               android:contentDescription="@string/action_type"
               android:src="@drawable/ic_sword_black"
               app:layout_constraintTop_toTopOf="@+id/actionNameTextView"
               app:layout_constraintRight_toLeftOf="@+id/actionNameTextView"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintHorizontal_weight="1" />
    <TextView android:id="@+id/actionNameTextView"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:gravity="center"
              android:textAllCaps="true"
              android:textStyle="bold"
              android:textSize="@dimen/big_text_size"
              android:text="@string/action_name"
              app:layout_constraintTop_toTopOf="@+id/actionCooldownTextView"
              app:layout_constraintRight_toLeftOf="@+id/actionCooldownTextView"
              app:layout_constraintLeft_toRightOf="@+id/actionTypeImageView"
              app:layout_constraintHorizontal_weight="10" />
    <TextView android:id="@+id/actionCooldownTextView"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:layout_marginEnd="@dimen/medium_padding"
              android:gravity="center"
              android:textStyle="bold"
              android:textSize="@dimen/big_text_size"
              android:hint="@string/zero"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toRightOf="@+id/actionNameTextView"
              app:layout_constraintHorizontal_weight="1" />

    <TextView android:id="@+id/actionTraitsTextView"
              android:layout_width="0dp"
              android:layout_height="30dp"
              android:paddingTop="@dimen/small_padding"
              android:gravity="center"
              android:textStyle="italic"
              android:hint="@string/action_traits"
              app:layout_constraintTop_toBottomOf="@+id/actionNameTextView"
              app:layout_constraintRight_toLeftOf="@+id/actionCooldownTextView"
              app:layout_constraintLeft_toRightOf="@+id/actionTypeImageView" />

    <TextView android:id="@+id/actionSkillsTextView"
              android:layout_width="0dp"
              android:layout_height="30dp"
              android:gravity="center"
              android:textSize="@dimen/small_text_size"
              android:hint="@string/skill"
              app:layout_constraintTop_toBottomOf="@+id/actionTraitsTextView"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent" />

    <TextView android:id="@+id/actionConditionsTextView"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:gravity="center"
              android:hint="@string/action_conditions"
              app:layout_constraintTop_toBottomOf="@+id/actionSkillsTextView"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent" />

    <ListView android:id="@+id/actionEffectsRecyclerView"
              android:layout_width="0dp"
              android:layout_height="0dp"
              tools:listitem="@layout/list_element_action_effect"
              app:layout_constraintTop_toBottomOf="@+id/actionConditionsTextView"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>