<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingStart="@dimen/list_std_margin"
                                             android:paddingTop="@dimen/list_std_margin"
                                             android:paddingEnd="@dimen/list_std_margin">
    <ImageView android:id="@+id/actionTypeImageView"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:contentDescription="@string/action_type"
               android:src="@drawable/ic_sword_black"
               app:layout_constraintTop_toTopOf="@+id/actionTraitsTextView"
               app:layout_constraintRight_toLeftOf="@+id/actionTraitsTextView"
               app:layout_constraintBottom_toBottomOf="@+id/actionConditionsTextView"
               app:layout_constraintLeft_toLeftOf="parent" />

    <TextView android:id="@+id/actionTraitsTextView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textStyle="italic"
              android:text="@string/action_traits"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintRight_toLeftOf="@+id/actionCooldownTextView"
              app:layout_constraintLeft_toRightOf="@+id/actionTypeImageView" />

    <TextView android:id="@+id/actionSkillsTextView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/skill"
              app:layout_constraintTop_toBottomOf="@+id/actionTraitsTextView"
              app:layout_constraintRight_toRightOf="@+id/actionTraitsTextView"
              app:layout_constraintLeft_toLeftOf="@+id/actionTraitsTextView" />

    <TextView android:id="@+id/actionConditionsTextView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:text="@string/action_conditions"
              app:layout_constraintTop_toBottomOf="@+id/actionSkillsTextView"
              app:layout_constraintRight_toRightOf="@+id/actionTraitsTextView"
              app:layout_constraintLeft_toLeftOf="@+id/actionTraitsTextView" />

    <TextView android:id="@+id/actionCooldownTextView"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:gravity="center"
              android:textStyle="bold"
              android:textSize="@dimen/big_text_size"
              android:hint="@string/zero"
              app:layout_constraintTop_toTopOf="@+id/actionTraitsTextView"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="@+id/actionConditionsTextView"
              app:layout_constraintLeft_toRightOf="@+id/actionTraitsTextView" />

    <ListView android:id="@+id/actionEffectsListView"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/big_padding"
              tools:listitem="@layout/list_element_action_effect"
              app:layout_constraintTop_toBottomOf="@+id/actionConditionsTextView"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>