<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/actionLayout"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <ImageView android:id="@+id/actionTypeImageView"
               android:layout_width="50dp"
               android:layout_height="0dp"
               android:padding="@dimen/small_padding"
               android:contentDescription="@string/action_type"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintRight_toLeftOf="@+id/actionNameTextView"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintHorizontal_weight="1" />

    <TextView android:id="@+id/actionNameTextView"
              android:layout_width="0dp"
              android:layout_height="40dp"
              android:gravity="center"
              android:textSize="@dimen/medium_text_size"
              android:hint="@string/action_name"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintRight_toLeftOf="@+id/actionCooldownTextView"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toRightOf="@+id/actionTypeImageView"
              app:layout_constraintHorizontal_weight="8" />

    <TextView android:id="@+id/actionCooldownTextView"
              android:layout_width="50dp"
              android:layout_height="0dp"
              android:gravity="center"
              android:textSize="@dimen/giant_text_size"
              android:textStyle="bold|italic"
              android:textColor="@android:color/black"
              android:hint="@string/zero"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintRight_toLeftOf="@+id/actionMenuImageButton"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintLeft_toRightOf="@+id/actionNameTextView"
              app:layout_constraintHorizontal_weight="1" />

    <ImageButton android:id="@+id/actionMenuImageButton"
                 android:layout_width="30dp"
                 android:layout_height="0dp"
                 android:background="@drawable/transparent_button"
                 android:src="@drawable/ic_options_black_24dp"
                 android:contentDescription="@string/page_actions"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/actionCooldownTextView"
                 app:layout_constraintHorizontal_weight="1" />
</android.support.constraint.ConstraintLayout>