<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:minHeight="50dp">

    <TextView android:id="@+id/player_name"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:minHeight="50dp"
              android:gravity="center_vertical|end"
              android:textSize="@dimen/medium_text_size"
              android:textStyle="bold"
              android:hint="@string/player_name"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toLeftOf="@+id/separator"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintHorizontal_weight="6" />
    <TextView android:id="@+id/separator"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:minHeight="50dp"
              android:gravity="center"
              android:text="@string/hyphen"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintLeft_toRightOf="@+id/player_name"
              app:layout_constraintRight_toLeftOf="@+id/race"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintHorizontal_weight="1" />
    <TextView android:id="@+id/race"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:minHeight="50dp"
              android:gravity="center_vertical|start"
              android:textStyle="italic"
              android:hint="@string/race"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintLeft_toRightOf="@+id/separator"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintHorizontal_weight="6" />
</android.support.constraint.ConstraintLayout>