<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".shared.activities.ActionSearchActivity">

    <include layout="@layout/toolbar" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/search_text_wrappper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/search"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/action_type_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/medium_padding"
            android:paddingEnd="@dimen/medium_padding"
            android:gravity="center|end"
            android:textSize="@dimen/medium_text_size"
            android:hint="@string/action_type"
            app:layout_constraintTop_toTopOf="@+id/action_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/action_type"
            app:layout_constraintBottom_toBottomOf="@+id/action_type"
            app:layout_constraintHorizontal_weight="1" />

        <Spinner
            android:id="@+id/action_type"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="@dimen/medium_padding"
            app:layout_constraintTop_toBottomOf="@+id/search_text_wrappper"
            app:layout_constraintLeft_toRightOf="@+id/action_type_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/cooldown_wrappper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/medium_padding"
            app:layout_constraintTop_toBottomOf="@+id/action_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cooldown"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/cooldown"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:imeOptions="actionNext"
                android:drawableStart="@drawable/ic_delay_black_24dp"
                android:drawablePadding="@dimen/small_padding" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/traits_textview"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="@dimen/medium_padding"
            android:gravity="center"
            android:textSize="@dimen/medium_text_size"
            android:hint="@string/action_traits"
            android:background="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/cooldown_wrappper"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_search_white" />
</android.support.design.widget.CoordinatorLayout>